// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`EditDiscountingRequestFields renders correctly for Discounting blended 1`] = `
<DocumentFragment>
  .c1 {
  margin: 0;
  line-height: 2;
  white-space: nowrap;
  margin-bottom: 5px;
  max-width: 720px;
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
}

.c0.c0.c0.c0.c0 .field .selection.dropdown {
  width: 50% !important;
}

.c0.c0.c0.c0.c0 .field.error {
  margin-bottom: 0;
}

.c0.c0.c0.c0.c0 label.inputLabel {
  width: 240px;
  margin-right: 0;
  display: inline-block;
  text-align: right;
  padding-right: 20px;
}

.c3.c3.c3.c3.c3 .field {
  margin-bottom: 16px;
}

.c3.c3.c3.c3.c3 .field .selection.dropdown {
  width: 50% !important;
}

.c3.c3.c3.c3.c3 .field.error {
  margin-bottom: 0;
}

.c3.c3.c3.c3.c3 label.inputLabel {
  width: 240px;
  margin-right: 0;
  display: inline-block;
  text-align: right;
  padding-right: 20px;
  vertical-align: top;
  font-weight: bold;
}

.c2 {
  display: inline-block;
  font-weight: bold;
  width: 200px;
  text-align: right;
  padding-right: 20px;
}

.c4.c4.c4.c4 {
  background-image: none;
}

.c4.c4.c4.c4 .label {
  display: inline-block;
  -webkit-text-decoration: none;
  text-decoration: none;
  text-transform: inherit;
}

<form
    class="ui form"
    data-test-id="edit-discounting-request-form"
    id="edit-discounting-request-form"
  >
    <li
      class="c0 c1"
    >
      <span
        class="c2"
        style="width: 240px;"
      >
        Invoice amount
      </span>
      <div
        class="ui input"
        data-test-id="invoiceAmount"
        style="flex-grow: 1; width: 270px;"
      >
        <input
          name="invoiceAmount"
          type="text"
          value="1,000.00"
        />
      </div>
      <div
        aria-disabled="true"
        aria-expanded="false"
        class="ui disabled compact search selection dropdown field disabled"
        data-test-id="currency"
        form="[object Object]"
        name="currency"
        role="combobox"
        style="margin: 0px 0px 0px 5px; width: 80px;"
      >
        <input
          aria-autocomplete="list"
          autocomplete="off"
          class="search"
          tabindex="-1"
          type="text"
          value=""
        />
        <div
          aria-live="polite"
          class="text"
          role="alert"
        >
          USD
        </div>
        <i
          aria-hidden="true"
          class="dropdown icon"
        />
        <div
          class="menu transition"
          role="listbox"
        >
          <div
            aria-checked="false"
            aria-selected="false"
            class="item"
            role="option"
            style="pointer-events: all;"
          >
            <span
              class="text"
            >
              AED
            </span>
          </div>
          <div
            aria-checked="false"
            aria-selected="false"
            class="item"
            role="option"
            style="pointer-events: all;"
          >
            <span
              class="text"
            >
              CHF
            </span>
          </div>
          <div
            aria-checked="false"
            aria-selected="false"
            class="item"
            role="option"
            style="pointer-events: all;"
          >
            <span
              class="text"
            >
              EUR
            </span>
          </div>
          <div
            aria-checked="false"
            aria-selected="false"
            class="item"
            role="option"
            style="pointer-events: all;"
          >
            <span
              class="text"
            >
              GBP
            </span>
          </div>
          <div
            aria-checked="false"
            aria-selected="false"
            class="item"
            role="option"
            style="pointer-events: all;"
          >
            <span
              class="text"
            >
              JPY
            </span>
          </div>
          <div
            aria-checked="true"
            aria-selected="true"
            class="active selected item"
            role="option"
            style="pointer-events: all;"
          >
            <span
              class="text"
            >
              USD
            </span>
          </div>
        </div>
      </div>
    </li>
    <li
      class="c3 c1"
    >
      <div
        class="ui two column grid"
      >
        <div
          class="row"
        >
          <div
            class="column"
            style="width: 240px;"
          >
            <div
              class="inline field"
              style="display: inherit; justify-content: unset; align-items: center;"
            >
              <label
                class="inputLabel"
              >
                Type
              </label>
            </div>
          </div>
          <div
            class="column"
          >
            <div
              class="field"
              style="margin: 0px;"
            >
              <div
                class="ui radio checkbox"
                data-test-id="invoiceType"
              >
                <input
                  class="hidden"
                  readonly=""
                  tabindex="0"
                  type="radio"
                  value=""
                />
                <label>
                  Indicative
                </label>
              </div>
            </div>
            <div
              class="field"
              style="margin: 0px;"
            >
              <div
                class="ui radio checkbox"
                data-test-id="invoiceType"
              >
                <input
                  class="hidden"
                  readonly=""
                  tabindex="0"
                  type="radio"
                  value=""
                />
                <label>
                  Provisional
                </label>
              </div>
            </div>
            <div
              class="field"
              style="margin: 0px;"
            >
              <div
                class="ui checked radio checkbox"
                data-test-id="invoiceType"
              >
                <input
                  checked=""
                  class="hidden"
                  readonly=""
                  tabindex="0"
                  type="radio"
                  value=""
                />
                <label>
                  Final
                </label>
              </div>
            </div>
          </div>
        </div>
      </div>
    </li>
    <li
      class="c3 c1"
    >
      <div
        class="field"
        style="display: inherit; justify-content: unset; align-items: center;"
      >
        <label
          class="inputLabel"
        >
          Expected advance rate
        </label>
        <div
          class="ui disabled right labeled input field disabled"
          data-test-id="advancedRate"
          style="width: 50%;"
        >
          <input
            disabled=""
            name="advancedRate"
            step="0.01"
            tabindex="-1"
            type="number"
            value="1.5"
          />
          <div
            class="ui basic label label"
            style="border-top-right-radius: .21428571rem; border-bottom-right-radius: .21428571rem; height: 32px; padding-top: 8px;"
          >
            %
          </div>
        </div>
      </div>
    </li>
    <li
      class="c3 c1"
    >
      <div
        class="field"
        style="display: inherit; justify-content: unset; align-items: center;"
      >
        <label
          class="inputLabel"
        >
          Expected risk cover date
        </label>
        <div
          class="ui input"
          data-test-id="riskCoverDate"
          style="width: 50%;"
        >
          <input
            name="riskCoverDate"
            type="date"
            value=""
          />
        </div>
      </div>
    </li>
    <li
      class="c3 c1"
    >
      <div
        class="field"
        style="display: inherit; justify-content: unset; align-items: center;"
      >
        <label
          class="inputLabel"
        >
          Expected days of risk cover
        </label>
        <div
          class="ui disabled input field disabled"
          data-test-id="numberOfDaysRiskCover"
          style="width: 50%;"
        >
          <input
            disabled=""
            name="numberOfDaysRiskCover"
            tabindex="-1"
            type="number"
            value=""
          />
        </div>
      </div>
    </li>
    <li
      class="c3 c1"
    >
      <div
        class="field"
        style="display: inherit; justify-content: unset; align-items: center;"
      >
        <label
          class="inputLabel"
        >
          Expected discounting date
        </label>
        <div
          class="ui input"
          data-test-id="discountingDate"
          style="width: 50%;"
        >
          <input
            name="discountingDate"
            type="date"
            value="2019-01-31"
          />
        </div>
      </div>
    </li>
    <li
      class="c3 c1"
    >
      <div
        class="inline field"
        style="display: inherit; justify-content: unset; align-items: center;"
      >
        <label
          class="inputLabel"
        >
          Expected days of discounting
        </label>
        <span
          style="width: 50%; display: inline-block;"
        >
          <div
            class="ui disabled input field disabled"
            data-test-id="numberOfDaysDiscounting"
            style="width: 100%;"
          >
            <input
              disabled=""
              name="numberOfDaysDiscounting"
              tabindex="-1"
              type="number"
              value="10"
            />
          </div>
        </span>
      </div>
    </li>
    <li
      class="c3 c1"
    >
      <div
        class="field"
        style="display: inherit; justify-content: unset; align-items: center;"
      >
        <label
          class="inputLabel"
        >
          Title transfer date
        </label>
        <div
          class="ui input"
          data-test-id="dateOfPerformance"
          style="width: 50%;"
        >
          <input
            name="dateOfPerformance"
            type="date"
            value="2019-01-31"
          />
        </div>
      </div>
    </li>
    <li
      class="c3 c1"
    >
      <div
        class="field"
        style="display: inherit; justify-content: unset; align-items: center;"
      >
        <label
          class="inputLabel"
        >
          Supporting instrument(s)
        </label>
        <div
          aria-expanded="false"
          aria-multiselectable="true"
          class="ui compact multiple selection dropdown c4"
          data-test-id="supportingInstruments"
          name="supportingInstruments"
          role="listbox"
          style="width: 50%;"
          tabindex="0"
        >
          <div
            aria-live="polite"
            class="default text"
            role="alert"
          >
            Select Supporting Instruments
          </div>
          <i
            aria-hidden="true"
            class="dropdown icon"
          />
          <div
            class="menu transition"
          >
            <div
              aria-checked="false"
              aria-selected="true"
              class="selected item"
              role="option"
              style="pointer-events: all;"
            >
              <span
                class="text"
              >
                Credit insurance
              </span>
            </div>
            <div
              aria-checked="false"
              aria-selected="false"
              class="item"
              role="option"
              style="pointer-events: all;"
            >
              <span
                class="text"
              >
                Financial instrument
              </span>
            </div>
            <div
              aria-checked="false"
              aria-selected="false"
              class="item"
              role="option"
              style="pointer-events: all;"
            >
              <span
                class="text"
              >
                Payment confirmation
              </span>
            </div>
            <div
              aria-checked="false"
              aria-selected="false"
              class="item"
              role="option"
              style="pointer-events: all;"
            >
              <span
                class="text"
              >
                Parent company guarantee
              </span>
            </div>
            <div
              aria-checked="false"
              aria-selected="false"
              class="item"
              role="option"
              style="pointer-events: all;"
            >
              <span
                class="text"
              >
                Payment undertaking
              </span>
            </div>
            <div
              aria-checked="false"
              aria-selected="false"
              class="item"
              role="option"
              style="pointer-events: all;"
            >
              <span
                class="text"
              >
                Bill of exchange
              </span>
            </div>
            <div
              aria-checked="false"
              aria-selected="false"
              class="item"
              role="option"
              style="pointer-events: all;"
            >
              <span
                class="text"
              >
                Promissory note
              </span>
            </div>
          </div>
        </div>
      </div>
    </li>
    <li
      class="c3 c1"
    >
      <div
        class="inline field"
        style="display: inherit; justify-content: unset; align-items: center;"
      >
        <label
          class="inputLabel"
        >
          Other information
        </label>
        <textarea
          class=""
          data-test-id="comment"
          name="comment"
          rows="3"
          style="width: 50%;"
        />
      </div>
    </li>
  </form>
</DocumentFragment>
`;

exports[`EditDiscountingRequestFields renders correctly for Discounting with recourse 1`] = `
<DocumentFragment>
  .c1 {
  margin: 0;
  line-height: 2;
  white-space: nowrap;
  margin-bottom: 5px;
  max-width: 720px;
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
}

.c0.c0.c0.c0.c0 .field .selection.dropdown {
  width: 50% !important;
}

.c0.c0.c0.c0.c0 .field.error {
  margin-bottom: 0;
}

.c0.c0.c0.c0.c0 label.inputLabel {
  width: 240px;
  margin-right: 0;
  display: inline-block;
  text-align: right;
  padding-right: 20px;
}

.c3.c3.c3.c3.c3 .field {
  margin-bottom: 16px;
}

.c3.c3.c3.c3.c3 .field .selection.dropdown {
  width: 50% !important;
}

.c3.c3.c3.c3.c3 .field.error {
  margin-bottom: 0;
}

.c3.c3.c3.c3.c3 label.inputLabel {
  width: 240px;
  margin-right: 0;
  display: inline-block;
  text-align: right;
  padding-right: 20px;
  vertical-align: top;
  font-weight: bold;
}

.c2 {
  display: inline-block;
  font-weight: bold;
  width: 200px;
  text-align: right;
  padding-right: 20px;
}

.c4.c4.c4.c4 {
  background-image: none;
}

.c4.c4.c4.c4 .label {
  display: inline-block;
  -webkit-text-decoration: none;
  text-decoration: none;
  text-transform: inherit;
}

<form
    class="ui form"
    data-test-id="edit-discounting-request-form"
    id="edit-discounting-request-form"
  >
    <li
      class="c0 c1"
    >
      <span
        class="c2"
        style="width: 240px;"
      >
        Invoice amount
      </span>
      <div
        class="ui input"
        data-test-id="invoiceAmount"
        style="flex-grow: 1; width: 270px;"
      >
        <input
          name="invoiceAmount"
          type="text"
          value="1,000.00"
        />
      </div>
      <div
        aria-disabled="true"
        aria-expanded="false"
        class="ui disabled compact search selection dropdown field disabled"
        data-test-id="currency"
        form="[object Object]"
        name="currency"
        role="combobox"
        style="margin: 0px 0px 0px 5px; width: 80px;"
      >
        <input
          aria-autocomplete="list"
          autocomplete="off"
          class="search"
          tabindex="-1"
          type="text"
          value=""
        />
        <div
          aria-live="polite"
          class="text"
          role="alert"
        >
          USD
        </div>
        <i
          aria-hidden="true"
          class="dropdown icon"
        />
        <div
          class="menu transition"
          role="listbox"
        >
          <div
            aria-checked="false"
            aria-selected="false"
            class="item"
            role="option"
            style="pointer-events: all;"
          >
            <span
              class="text"
            >
              AED
            </span>
          </div>
          <div
            aria-checked="false"
            aria-selected="false"
            class="item"
            role="option"
            style="pointer-events: all;"
          >
            <span
              class="text"
            >
              CHF
            </span>
          </div>
          <div
            aria-checked="false"
            aria-selected="false"
            class="item"
            role="option"
            style="pointer-events: all;"
          >
            <span
              class="text"
            >
              EUR
            </span>
          </div>
          <div
            aria-checked="false"
            aria-selected="false"
            class="item"
            role="option"
            style="pointer-events: all;"
          >
            <span
              class="text"
            >
              GBP
            </span>
          </div>
          <div
            aria-checked="false"
            aria-selected="false"
            class="item"
            role="option"
            style="pointer-events: all;"
          >
            <span
              class="text"
            >
              JPY
            </span>
          </div>
          <div
            aria-checked="true"
            aria-selected="true"
            class="active selected item"
            role="option"
            style="pointer-events: all;"
          >
            <span
              class="text"
            >
              USD
            </span>
          </div>
        </div>
      </div>
    </li>
    <li
      class="c3 c1"
    >
      <div
        class="ui two column grid"
      >
        <div
          class="row"
        >
          <div
            class="column"
            style="width: 240px;"
          >
            <div
              class="inline field"
              style="display: inherit; justify-content: unset; align-items: center;"
            >
              <label
                class="inputLabel"
              >
                Type
              </label>
            </div>
          </div>
          <div
            class="column"
          >
            <div
              class="field"
              style="margin: 0px;"
            >
              <div
                class="ui radio checkbox"
                data-test-id="invoiceType"
              >
                <input
                  class="hidden"
                  readonly=""
                  tabindex="0"
                  type="radio"
                  value=""
                />
                <label>
                  Indicative
                </label>
              </div>
            </div>
            <div
              class="field"
              style="margin: 0px;"
            >
              <div
                class="ui radio checkbox"
                data-test-id="invoiceType"
              >
                <input
                  class="hidden"
                  readonly=""
                  tabindex="0"
                  type="radio"
                  value=""
                />
                <label>
                  Provisional
                </label>
              </div>
            </div>
            <div
              class="field"
              style="margin: 0px;"
            >
              <div
                class="ui checked radio checkbox"
                data-test-id="invoiceType"
              >
                <input
                  checked=""
                  class="hidden"
                  readonly=""
                  tabindex="0"
                  type="radio"
                  value=""
                />
                <label>
                  Final
                </label>
              </div>
            </div>
          </div>
        </div>
      </div>
    </li>
    <li
      class="c3 c1"
    >
      <div
        class="field"
        style="display: inherit; justify-content: unset; align-items: center;"
      >
        <label
          class="inputLabel"
        >
          Expected advance rate
        </label>
        <div
          class="ui disabled right labeled input field disabled"
          data-test-id="advancedRate"
          style="width: 50%;"
        >
          <input
            disabled=""
            name="advancedRate"
            step="0.01"
            tabindex="-1"
            type="number"
            value="1.5"
          />
          <div
            class="ui basic label label"
            style="border-top-right-radius: .21428571rem; border-bottom-right-radius: .21428571rem; height: 32px; padding-top: 8px;"
          >
            %
          </div>
        </div>
      </div>
    </li>
    <li
      class="c3 c1"
    >
      <div
        class="field"
        style="display: inherit; justify-content: unset; align-items: center;"
      >
        <label
          class="inputLabel"
        >
          Expected discounting date
        </label>
        <div
          class="ui input"
          data-test-id="discountingDate"
          style="width: 50%;"
        >
          <input
            name="discountingDate"
            type="date"
            value="2019-01-31"
          />
        </div>
      </div>
    </li>
    <li
      class="c3 c1"
    >
      <div
        class="inline field"
        style="display: inherit; justify-content: unset; align-items: center;"
      >
        <label
          class="inputLabel"
        >
          Expected days of discounting
        </label>
        <span
          style="width: 50%; display: inline-block;"
        >
          <div
            class="ui disabled input field disabled"
            data-test-id="numberOfDaysDiscounting"
            style="width: 100%;"
          >
            <input
              disabled=""
              name="numberOfDaysDiscounting"
              tabindex="-1"
              type="number"
              value="10"
            />
          </div>
        </span>
      </div>
    </li>
    <li
      class="c3 c1"
    >
      <div
        class="field"
        style="display: inherit; justify-content: unset; align-items: center;"
      >
        <label
          class="inputLabel"
        >
          Title transfer date
        </label>
        <div
          class="ui input"
          data-test-id="dateOfPerformance"
          style="width: 50%;"
        >
          <input
            name="dateOfPerformance"
            type="date"
            value="2019-01-31"
          />
        </div>
      </div>
    </li>
    <li
      class="c3 c1"
    >
      <div
        class="field"
        style="display: inherit; justify-content: unset; align-items: center;"
      >
        <label
          class="inputLabel"
        >
          Supporting instrument(s)
        </label>
        <div
          aria-expanded="false"
          aria-multiselectable="true"
          class="ui compact multiple selection dropdown c4"
          data-test-id="supportingInstruments"
          name="supportingInstruments"
          role="listbox"
          style="width: 50%;"
          tabindex="0"
        >
          <div
            aria-live="polite"
            class="default text"
            role="alert"
          >
            Select Supporting Instruments
          </div>
          <i
            aria-hidden="true"
            class="dropdown icon"
          />
          <div
            class="menu transition"
          >
            <div
              aria-checked="false"
              aria-selected="true"
              class="selected item"
              role="option"
              style="pointer-events: all;"
            >
              <span
                class="text"
              >
                Credit insurance
              </span>
            </div>
            <div
              aria-checked="false"
              aria-selected="false"
              class="item"
              role="option"
              style="pointer-events: all;"
            >
              <span
                class="text"
              >
                Financial instrument
              </span>
            </div>
            <div
              aria-checked="false"
              aria-selected="false"
              class="item"
              role="option"
              style="pointer-events: all;"
            >
              <span
                class="text"
              >
                Payment confirmation
              </span>
            </div>
            <div
              aria-checked="false"
              aria-selected="false"
              class="item"
              role="option"
              style="pointer-events: all;"
            >
              <span
                class="text"
              >
                Parent company guarantee
              </span>
            </div>
            <div
              aria-checked="false"
              aria-selected="false"
              class="item"
              role="option"
              style="pointer-events: all;"
            >
              <span
                class="text"
              >
                Payment undertaking
              </span>
            </div>
            <div
              aria-checked="false"
              aria-selected="false"
              class="item"
              role="option"
              style="pointer-events: all;"
            >
              <span
                class="text"
              >
                Bill of exchange
              </span>
            </div>
            <div
              aria-checked="false"
              aria-selected="false"
              class="item"
              role="option"
              style="pointer-events: all;"
            >
              <span
                class="text"
              >
                Promissory note
              </span>
            </div>
          </div>
        </div>
      </div>
    </li>
    <li
      class="c3 c1"
    >
      <div
        class="inline field"
        style="display: inherit; justify-content: unset; align-items: center;"
      >
        <label
          class="inputLabel"
        >
          Other information
        </label>
        <textarea
          class=""
          data-test-id="comment"
          name="comment"
          rows="3"
          style="width: 50%;"
        />
      </div>
    </li>
  </form>
</DocumentFragment>
`;

exports[`EditDiscountingRequestFields renders correctly for Discounting without recourse 1`] = `
<DocumentFragment>
  .c1 {
  margin: 0;
  line-height: 2;
  white-space: nowrap;
  margin-bottom: 5px;
  max-width: 720px;
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
}

.c0.c0.c0.c0.c0 .field .selection.dropdown {
  width: 50% !important;
}

.c0.c0.c0.c0.c0 .field.error {
  margin-bottom: 0;
}

.c0.c0.c0.c0.c0 label.inputLabel {
  width: 240px;
  margin-right: 0;
  display: inline-block;
  text-align: right;
  padding-right: 20px;
}

.c3.c3.c3.c3.c3 .field {
  margin-bottom: 16px;
}

.c3.c3.c3.c3.c3 .field .selection.dropdown {
  width: 50% !important;
}

.c3.c3.c3.c3.c3 .field.error {
  margin-bottom: 0;
}

.c3.c3.c3.c3.c3 label.inputLabel {
  width: 240px;
  margin-right: 0;
  display: inline-block;
  text-align: right;
  padding-right: 20px;
  vertical-align: top;
  font-weight: bold;
}

.c2 {
  display: inline-block;
  font-weight: bold;
  width: 200px;
  text-align: right;
  padding-right: 20px;
}

.c4.c4.c4.c4 {
  background-image: none;
}

.c4.c4.c4.c4 .label {
  display: inline-block;
  -webkit-text-decoration: none;
  text-decoration: none;
  text-transform: inherit;
}

<form
    class="ui form"
    data-test-id="edit-discounting-request-form"
    id="edit-discounting-request-form"
  >
    <li
      class="c0 c1"
    >
      <span
        class="c2"
        style="width: 240px;"
      >
        Invoice amount
      </span>
      <div
        class="ui input"
        data-test-id="invoiceAmount"
        style="flex-grow: 1; width: 270px;"
      >
        <input
          name="invoiceAmount"
          type="text"
          value="1,000.00"
        />
      </div>
      <div
        aria-disabled="true"
        aria-expanded="false"
        class="ui disabled compact search selection dropdown field disabled"
        data-test-id="currency"
        form="[object Object]"
        name="currency"
        role="combobox"
        style="margin: 0px 0px 0px 5px; width: 80px;"
      >
        <input
          aria-autocomplete="list"
          autocomplete="off"
          class="search"
          tabindex="-1"
          type="text"
          value=""
        />
        <div
          aria-live="polite"
          class="text"
          role="alert"
        >
          USD
        </div>
        <i
          aria-hidden="true"
          class="dropdown icon"
        />
        <div
          class="menu transition"
          role="listbox"
        >
          <div
            aria-checked="false"
            aria-selected="false"
            class="item"
            role="option"
            style="pointer-events: all;"
          >
            <span
              class="text"
            >
              AED
            </span>
          </div>
          <div
            aria-checked="false"
            aria-selected="false"
            class="item"
            role="option"
            style="pointer-events: all;"
          >
            <span
              class="text"
            >
              CHF
            </span>
          </div>
          <div
            aria-checked="false"
            aria-selected="false"
            class="item"
            role="option"
            style="pointer-events: all;"
          >
            <span
              class="text"
            >
              EUR
            </span>
          </div>
          <div
            aria-checked="false"
            aria-selected="false"
            class="item"
            role="option"
            style="pointer-events: all;"
          >
            <span
              class="text"
            >
              GBP
            </span>
          </div>
          <div
            aria-checked="false"
            aria-selected="false"
            class="item"
            role="option"
            style="pointer-events: all;"
          >
            <span
              class="text"
            >
              JPY
            </span>
          </div>
          <div
            aria-checked="true"
            aria-selected="true"
            class="active selected item"
            role="option"
            style="pointer-events: all;"
          >
            <span
              class="text"
            >
              USD
            </span>
          </div>
        </div>
      </div>
    </li>
    <li
      class="c3 c1"
    >
      <div
        class="ui two column grid"
      >
        <div
          class="row"
        >
          <div
            class="column"
            style="width: 240px;"
          >
            <div
              class="inline field"
              style="display: inherit; justify-content: unset; align-items: center;"
            >
              <label
                class="inputLabel"
              >
                Type
              </label>
            </div>
          </div>
          <div
            class="column"
          >
            <div
              class="field"
              style="margin: 0px;"
            >
              <div
                class="ui radio checkbox"
                data-test-id="invoiceType"
              >
                <input
                  class="hidden"
                  readonly=""
                  tabindex="0"
                  type="radio"
                  value=""
                />
                <label>
                  Indicative
                </label>
              </div>
            </div>
            <div
              class="field"
              style="margin: 0px;"
            >
              <div
                class="ui radio checkbox"
                data-test-id="invoiceType"
              >
                <input
                  class="hidden"
                  readonly=""
                  tabindex="0"
                  type="radio"
                  value=""
                />
                <label>
                  Provisional
                </label>
              </div>
            </div>
            <div
              class="field"
              style="margin: 0px;"
            >
              <div
                class="ui checked radio checkbox"
                data-test-id="invoiceType"
              >
                <input
                  checked=""
                  class="hidden"
                  readonly=""
                  tabindex="0"
                  type="radio"
                  value=""
                />
                <label>
                  Final
                </label>
              </div>
            </div>
          </div>
        </div>
      </div>
    </li>
    <li
      class="c3 c1"
    >
      <div
        class="field"
        style="display: inherit; justify-content: unset; align-items: center;"
      >
        <label
          class="inputLabel"
        >
          Expected advance rate
        </label>
        <div
          class="ui disabled right labeled input field disabled"
          data-test-id="advancedRate"
          style="width: 50%;"
        >
          <input
            disabled=""
            name="advancedRate"
            step="0.01"
            tabindex="-1"
            type="number"
            value="1.5"
          />
          <div
            class="ui basic label label"
            style="border-top-right-radius: .21428571rem; border-bottom-right-radius: .21428571rem; height: 32px; padding-top: 8px;"
          >
            %
          </div>
        </div>
      </div>
    </li>
    <li
      class="c3 c1"
    >
      <div
        class="field"
        style="display: inherit; justify-content: unset; align-items: center;"
      >
        <label
          class="inputLabel"
        >
          Expected discounting date
        </label>
        <div
          class="ui input"
          data-test-id="discountingDate"
          style="width: 50%;"
        >
          <input
            name="discountingDate"
            type="date"
            value="2019-01-31"
          />
        </div>
      </div>
    </li>
    <li
      class="c3 c1"
    >
      <div
        class="inline field"
        style="display: inherit; justify-content: unset; align-items: center;"
      >
        <label
          class="inputLabel"
        >
          Expected days of discounting
        </label>
        <span
          style="width: 50%; display: inline-block;"
        >
          <div
            class="ui disabled input field disabled"
            data-test-id="numberOfDaysDiscounting"
            style="width: 100%;"
          >
            <input
              disabled=""
              name="numberOfDaysDiscounting"
              tabindex="-1"
              type="number"
              value="10"
            />
          </div>
        </span>
      </div>
    </li>
    <li
      class="c3 c1"
    >
      <div
        class="field"
        style="display: inherit; justify-content: unset; align-items: center;"
      >
        <label
          class="inputLabel"
        >
          Title transfer date
        </label>
        <div
          class="ui input"
          data-test-id="dateOfPerformance"
          style="width: 50%;"
        >
          <input
            name="dateOfPerformance"
            type="date"
            value="2019-01-31"
          />
        </div>
      </div>
    </li>
    <li
      class="c3 c1"
    >
      <div
        class="field"
        style="display: inherit; justify-content: unset; align-items: center;"
      >
        <label
          class="inputLabel"
        >
          Supporting instrument(s)
        </label>
        <div
          aria-expanded="false"
          aria-multiselectable="true"
          class="ui compact multiple selection dropdown c4"
          data-test-id="supportingInstruments"
          name="supportingInstruments"
          role="listbox"
          style="width: 50%;"
          tabindex="0"
        >
          <div
            aria-live="polite"
            class="default text"
            role="alert"
          >
            Select Supporting Instruments
          </div>
          <i
            aria-hidden="true"
            class="dropdown icon"
          />
          <div
            class="menu transition"
          >
            <div
              aria-checked="false"
              aria-selected="true"
              class="selected item"
              role="option"
              style="pointer-events: all;"
            >
              <span
                class="text"
              >
                Credit insurance
              </span>
            </div>
            <div
              aria-checked="false"
              aria-selected="false"
              class="item"
              role="option"
              style="pointer-events: all;"
            >
              <span
                class="text"
              >
                Financial instrument
              </span>
            </div>
            <div
              aria-checked="false"
              aria-selected="false"
              class="item"
              role="option"
              style="pointer-events: all;"
            >
              <span
                class="text"
              >
                Payment confirmation
              </span>
            </div>
            <div
              aria-checked="false"
              aria-selected="false"
              class="item"
              role="option"
              style="pointer-events: all;"
            >
              <span
                class="text"
              >
                Parent company guarantee
              </span>
            </div>
            <div
              aria-checked="false"
              aria-selected="false"
              class="item"
              role="option"
              style="pointer-events: all;"
            >
              <span
                class="text"
              >
                Payment undertaking
              </span>
            </div>
            <div
              aria-checked="false"
              aria-selected="false"
              class="item"
              role="option"
              style="pointer-events: all;"
            >
              <span
                class="text"
              >
                Bill of exchange
              </span>
            </div>
            <div
              aria-checked="false"
              aria-selected="false"
              class="item"
              role="option"
              style="pointer-events: all;"
            >
              <span
                class="text"
              >
                Promissory note
              </span>
            </div>
          </div>
        </div>
      </div>
    </li>
    <li
      class="c3 c1"
    >
      <div
        class="inline field"
        style="display: inherit; justify-content: unset; align-items: center;"
      >
        <label
          class="inputLabel"
        >
          Other information
        </label>
        <textarea
          class=""
          data-test-id="comment"
          name="comment"
          rows="3"
          style="width: 50%;"
        />
      </div>
    </li>
  </form>
</DocumentFragment>
`;

exports[`EditDiscountingRequestFields renders correctly for Risk Cover only 1`] = `
<DocumentFragment>
  .c1 {
  margin: 0;
  line-height: 2;
  white-space: nowrap;
  margin-bottom: 5px;
  max-width: 720px;
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
}

.c0.c0.c0.c0.c0 .field .selection.dropdown {
  width: 50% !important;
}

.c0.c0.c0.c0.c0 .field.error {
  margin-bottom: 0;
}

.c0.c0.c0.c0.c0 label.inputLabel {
  width: 240px;
  margin-right: 0;
  display: inline-block;
  text-align: right;
  padding-right: 20px;
}

.c3.c3.c3.c3.c3 .field {
  margin-bottom: 16px;
}

.c3.c3.c3.c3.c3 .field .selection.dropdown {
  width: 50% !important;
}

.c3.c3.c3.c3.c3 .field.error {
  margin-bottom: 0;
}

.c3.c3.c3.c3.c3 label.inputLabel {
  width: 240px;
  margin-right: 0;
  display: inline-block;
  text-align: right;
  padding-right: 20px;
  vertical-align: top;
  font-weight: bold;
}

.c2 {
  display: inline-block;
  font-weight: bold;
  width: 200px;
  text-align: right;
  padding-right: 20px;
}

.c4.c4.c4.c4 {
  background-image: none;
}

.c4.c4.c4.c4 .label {
  display: inline-block;
  -webkit-text-decoration: none;
  text-decoration: none;
  text-transform: inherit;
}

<form
    class="ui form"
    data-test-id="edit-discounting-request-form"
    id="edit-discounting-request-form"
  >
    <li
      class="c0 c1"
    >
      <span
        class="c2"
        style="width: 240px;"
      >
        Invoice amount
      </span>
      <div
        class="ui input"
        data-test-id="invoiceAmount"
        style="flex-grow: 1; width: 270px;"
      >
        <input
          name="invoiceAmount"
          type="text"
          value="1,000.00"
        />
      </div>
      <div
        aria-disabled="true"
        aria-expanded="false"
        class="ui disabled compact search selection dropdown field disabled"
        data-test-id="currency"
        form="[object Object]"
        name="currency"
        role="combobox"
        style="margin: 0px 0px 0px 5px; width: 80px;"
      >
        <input
          aria-autocomplete="list"
          autocomplete="off"
          class="search"
          tabindex="-1"
          type="text"
          value=""
        />
        <div
          aria-live="polite"
          class="text"
          role="alert"
        >
          USD
        </div>
        <i
          aria-hidden="true"
          class="dropdown icon"
        />
        <div
          class="menu transition"
          role="listbox"
        >
          <div
            aria-checked="false"
            aria-selected="false"
            class="item"
            role="option"
            style="pointer-events: all;"
          >
            <span
              class="text"
            >
              AED
            </span>
          </div>
          <div
            aria-checked="false"
            aria-selected="false"
            class="item"
            role="option"
            style="pointer-events: all;"
          >
            <span
              class="text"
            >
              CHF
            </span>
          </div>
          <div
            aria-checked="false"
            aria-selected="false"
            class="item"
            role="option"
            style="pointer-events: all;"
          >
            <span
              class="text"
            >
              EUR
            </span>
          </div>
          <div
            aria-checked="false"
            aria-selected="false"
            class="item"
            role="option"
            style="pointer-events: all;"
          >
            <span
              class="text"
            >
              GBP
            </span>
          </div>
          <div
            aria-checked="false"
            aria-selected="false"
            class="item"
            role="option"
            style="pointer-events: all;"
          >
            <span
              class="text"
            >
              JPY
            </span>
          </div>
          <div
            aria-checked="true"
            aria-selected="true"
            class="active selected item"
            role="option"
            style="pointer-events: all;"
          >
            <span
              class="text"
            >
              USD
            </span>
          </div>
        </div>
      </div>
    </li>
    <li
      class="c3 c1"
    >
      <div
        class="ui two column grid"
      >
        <div
          class="row"
        >
          <div
            class="column"
            style="width: 240px;"
          >
            <div
              class="inline field"
              style="display: inherit; justify-content: unset; align-items: center;"
            >
              <label
                class="inputLabel"
              >
                Type
              </label>
            </div>
          </div>
          <div
            class="column"
          >
            <div
              class="field"
              style="margin: 0px;"
            >
              <div
                class="ui radio checkbox"
                data-test-id="invoiceType"
              >
                <input
                  class="hidden"
                  readonly=""
                  tabindex="0"
                  type="radio"
                  value=""
                />
                <label>
                  Indicative
                </label>
              </div>
            </div>
            <div
              class="field"
              style="margin: 0px;"
            >
              <div
                class="ui radio checkbox"
                data-test-id="invoiceType"
              >
                <input
                  class="hidden"
                  readonly=""
                  tabindex="0"
                  type="radio"
                  value=""
                />
                <label>
                  Provisional
                </label>
              </div>
            </div>
            <div
              class="field"
              style="margin: 0px;"
            >
              <div
                class="ui checked radio checkbox"
                data-test-id="invoiceType"
              >
                <input
                  checked=""
                  class="hidden"
                  readonly=""
                  tabindex="0"
                  type="radio"
                  value=""
                />
                <label>
                  Final
                </label>
              </div>
            </div>
          </div>
        </div>
      </div>
    </li>
    <li
      class="c3 c1"
    >
      <div
        class="field"
        style="display: inherit; justify-content: unset; align-items: center;"
      >
        <label
          class="inputLabel"
        >
          Expected advance rate
        </label>
        <div
          class="ui disabled right labeled input field disabled"
          data-test-id="advancedRate"
          style="width: 50%;"
        >
          <input
            disabled=""
            name="advancedRate"
            step="0.01"
            tabindex="-1"
            type="number"
            value="1.5"
          />
          <div
            class="ui basic label label"
            style="border-top-right-radius: .21428571rem; border-bottom-right-radius: .21428571rem; height: 32px; padding-top: 8px;"
          >
            %
          </div>
        </div>
      </div>
    </li>
    <li
      class="c3 c1"
    >
      <div
        class="field"
        style="display: inherit; justify-content: unset; align-items: center;"
      >
        <label
          class="inputLabel"
        >
          Expected risk cover date
        </label>
        <div
          class="ui input"
          data-test-id="riskCoverDate"
          style="width: 50%;"
        >
          <input
            name="riskCoverDate"
            type="date"
            value=""
          />
        </div>
      </div>
    </li>
    <li
      class="c3 c1"
    >
      <div
        class="field"
        style="display: inherit; justify-content: unset; align-items: center;"
      >
        <label
          class="inputLabel"
        >
          Expected days of risk cover
        </label>
        <div
          class="ui disabled input field disabled"
          data-test-id="numberOfDaysRiskCover"
          style="width: 50%;"
        >
          <input
            disabled=""
            name="numberOfDaysRiskCover"
            tabindex="-1"
            type="number"
            value=""
          />
        </div>
      </div>
    </li>
    <li
      class="c3 c1"
    >
      <div
        class="field"
        style="display: inherit; justify-content: unset; align-items: center;"
      >
        <label
          class="inputLabel"
        >
          Title transfer date
        </label>
        <div
          class="ui input"
          data-test-id="dateOfPerformance"
          style="width: 50%;"
        >
          <input
            name="dateOfPerformance"
            type="date"
            value="2019-01-31"
          />
        </div>
      </div>
    </li>
    <li
      class="c3 c1"
    >
      <div
        class="field"
        style="display: inherit; justify-content: unset; align-items: center;"
      >
        <label
          class="inputLabel"
        >
          Supporting instrument(s)
        </label>
        <div
          aria-expanded="false"
          aria-multiselectable="true"
          class="ui compact multiple selection dropdown c4"
          data-test-id="supportingInstruments"
          name="supportingInstruments"
          role="listbox"
          style="width: 50%;"
          tabindex="0"
        >
          <div
            aria-live="polite"
            class="default text"
            role="alert"
          >
            Select Supporting Instruments
          </div>
          <i
            aria-hidden="true"
            class="dropdown icon"
          />
          <div
            class="menu transition"
          >
            <div
              aria-checked="false"
              aria-selected="true"
              class="selected item"
              role="option"
              style="pointer-events: all;"
            >
              <span
                class="text"
              >
                Credit insurance
              </span>
            </div>
            <div
              aria-checked="false"
              aria-selected="false"
              class="item"
              role="option"
              style="pointer-events: all;"
            >
              <span
                class="text"
              >
                Financial instrument
              </span>
            </div>
            <div
              aria-checked="false"
              aria-selected="false"
              class="item"
              role="option"
              style="pointer-events: all;"
            >
              <span
                class="text"
              >
                Payment confirmation
              </span>
            </div>
            <div
              aria-checked="false"
              aria-selected="false"
              class="item"
              role="option"
              style="pointer-events: all;"
            >
              <span
                class="text"
              >
                Parent company guarantee
              </span>
            </div>
            <div
              aria-checked="false"
              aria-selected="false"
              class="item"
              role="option"
              style="pointer-events: all;"
            >
              <span
                class="text"
              >
                Payment undertaking
              </span>
            </div>
            <div
              aria-checked="false"
              aria-selected="false"
              class="item"
              role="option"
              style="pointer-events: all;"
            >
              <span
                class="text"
              >
                Bill of exchange
              </span>
            </div>
            <div
              aria-checked="false"
              aria-selected="false"
              class="item"
              role="option"
              style="pointer-events: all;"
            >
              <span
                class="text"
              >
                Promissory note
              </span>
            </div>
          </div>
        </div>
      </div>
    </li>
    <li
      class="c3 c1"
    >
      <div
        class="inline field"
        style="display: inherit; justify-content: unset; align-items: center;"
      >
        <label
          class="inputLabel"
        >
          Other information
        </label>
        <textarea
          class=""
          data-test-id="comment"
          name="comment"
          rows="3"
          style="width: 50%;"
        />
      </div>
    </li>
  </form>
</DocumentFragment>
`;

exports[`EditDiscountingRequestFields renders correctly for Risk Cover with discounting option 1`] = `
<DocumentFragment>
  .c1 {
  margin: 0;
  line-height: 2;
  white-space: nowrap;
  margin-bottom: 5px;
  max-width: 720px;
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
}

.c0.c0.c0.c0.c0 .field .selection.dropdown {
  width: 50% !important;
}

.c0.c0.c0.c0.c0 .field.error {
  margin-bottom: 0;
}

.c0.c0.c0.c0.c0 label.inputLabel {
  width: 240px;
  margin-right: 0;
  display: inline-block;
  text-align: right;
  padding-right: 20px;
}

.c3.c3.c3.c3.c3 .field {
  margin-bottom: 16px;
}

.c3.c3.c3.c3.c3 .field .selection.dropdown {
  width: 50% !important;
}

.c3.c3.c3.c3.c3 .field.error {
  margin-bottom: 0;
}

.c3.c3.c3.c3.c3 label.inputLabel {
  width: 240px;
  margin-right: 0;
  display: inline-block;
  text-align: right;
  padding-right: 20px;
  vertical-align: top;
  font-weight: bold;
}

.c2 {
  display: inline-block;
  font-weight: bold;
  width: 200px;
  text-align: right;
  padding-right: 20px;
}

.c4.c4.c4.c4 {
  background-image: none;
}

.c4.c4.c4.c4 .label {
  display: inline-block;
  -webkit-text-decoration: none;
  text-decoration: none;
  text-transform: inherit;
}

<form
    class="ui form"
    data-test-id="edit-discounting-request-form"
    id="edit-discounting-request-form"
  >
    <li
      class="c0 c1"
    >
      <span
        class="c2"
        style="width: 240px;"
      >
        Invoice amount
      </span>
      <div
        class="ui input"
        data-test-id="invoiceAmount"
        style="flex-grow: 1; width: 270px;"
      >
        <input
          name="invoiceAmount"
          type="text"
          value="1,000.00"
        />
      </div>
      <div
        aria-disabled="true"
        aria-expanded="false"
        class="ui disabled compact search selection dropdown field disabled"
        data-test-id="currency"
        form="[object Object]"
        name="currency"
        role="combobox"
        style="margin: 0px 0px 0px 5px; width: 80px;"
      >
        <input
          aria-autocomplete="list"
          autocomplete="off"
          class="search"
          tabindex="-1"
          type="text"
          value=""
        />
        <div
          aria-live="polite"
          class="text"
          role="alert"
        >
          USD
        </div>
        <i
          aria-hidden="true"
          class="dropdown icon"
        />
        <div
          class="menu transition"
          role="listbox"
        >
          <div
            aria-checked="false"
            aria-selected="false"
            class="item"
            role="option"
            style="pointer-events: all;"
          >
            <span
              class="text"
            >
              AED
            </span>
          </div>
          <div
            aria-checked="false"
            aria-selected="false"
            class="item"
            role="option"
            style="pointer-events: all;"
          >
            <span
              class="text"
            >
              CHF
            </span>
          </div>
          <div
            aria-checked="false"
            aria-selected="false"
            class="item"
            role="option"
            style="pointer-events: all;"
          >
            <span
              class="text"
            >
              EUR
            </span>
          </div>
          <div
            aria-checked="false"
            aria-selected="false"
            class="item"
            role="option"
            style="pointer-events: all;"
          >
            <span
              class="text"
            >
              GBP
            </span>
          </div>
          <div
            aria-checked="false"
            aria-selected="false"
            class="item"
            role="option"
            style="pointer-events: all;"
          >
            <span
              class="text"
            >
              JPY
            </span>
          </div>
          <div
            aria-checked="true"
            aria-selected="true"
            class="active selected item"
            role="option"
            style="pointer-events: all;"
          >
            <span
              class="text"
            >
              USD
            </span>
          </div>
        </div>
      </div>
    </li>
    <li
      class="c3 c1"
    >
      <div
        class="ui two column grid"
      >
        <div
          class="row"
        >
          <div
            class="column"
            style="width: 240px;"
          >
            <div
              class="inline field"
              style="display: inherit; justify-content: unset; align-items: center;"
            >
              <label
                class="inputLabel"
              >
                Type
              </label>
            </div>
          </div>
          <div
            class="column"
          >
            <div
              class="field"
              style="margin: 0px;"
            >
              <div
                class="ui radio checkbox"
                data-test-id="invoiceType"
              >
                <input
                  class="hidden"
                  readonly=""
                  tabindex="0"
                  type="radio"
                  value=""
                />
                <label>
                  Indicative
                </label>
              </div>
            </div>
            <div
              class="field"
              style="margin: 0px;"
            >
              <div
                class="ui radio checkbox"
                data-test-id="invoiceType"
              >
                <input
                  class="hidden"
                  readonly=""
                  tabindex="0"
                  type="radio"
                  value=""
                />
                <label>
                  Provisional
                </label>
              </div>
            </div>
            <div
              class="field"
              style="margin: 0px;"
            >
              <div
                class="ui checked radio checkbox"
                data-test-id="invoiceType"
              >
                <input
                  checked=""
                  class="hidden"
                  readonly=""
                  tabindex="0"
                  type="radio"
                  value=""
                />
                <label>
                  Final
                </label>
              </div>
            </div>
          </div>
        </div>
      </div>
    </li>
    <li
      class="c3 c1"
    >
      <div
        class="field"
        style="display: inherit; justify-content: unset; align-items: center;"
      >
        <label
          class="inputLabel"
        >
          Expected advance rate
        </label>
        <div
          class="ui disabled right labeled input field disabled"
          data-test-id="advancedRate"
          style="width: 50%;"
        >
          <input
            disabled=""
            name="advancedRate"
            step="0.01"
            tabindex="-1"
            type="number"
            value="1.5"
          />
          <div
            class="ui basic label label"
            style="border-top-right-radius: .21428571rem; border-bottom-right-radius: .21428571rem; height: 32px; padding-top: 8px;"
          >
            %
          </div>
        </div>
      </div>
    </li>
    <li
      class="c3 c1"
    >
      <div
        class="field"
        style="display: inherit; justify-content: unset; align-items: center;"
      >
        <label
          class="inputLabel"
        >
          Expected risk cover date
        </label>
        <div
          class="ui input"
          data-test-id="riskCoverDate"
          style="width: 50%;"
        >
          <input
            name="riskCoverDate"
            type="date"
            value=""
          />
        </div>
      </div>
    </li>
    <li
      class="c3 c1"
    >
      <div
        class="field"
        style="display: inherit; justify-content: unset; align-items: center;"
      >
        <label
          class="inputLabel"
        >
          Expected days of risk cover
        </label>
        <div
          class="ui disabled input field disabled"
          data-test-id="numberOfDaysRiskCover"
          style="width: 50%;"
        >
          <input
            disabled=""
            name="numberOfDaysRiskCover"
            tabindex="-1"
            type="number"
            value=""
          />
        </div>
      </div>
    </li>
    <li
      class="c3 c1"
    >
      <div
        class="field"
        style="display: inherit; justify-content: unset; align-items: center;"
      >
        <label
          class="inputLabel"
        >
          Expected discounting date
        </label>
        <div
          class="ui input"
          data-test-id="discountingDate"
          style="width: 50%;"
        >
          <input
            name="discountingDate"
            type="date"
            value="2019-01-31"
          />
        </div>
      </div>
    </li>
    <li
      class="c3 c1"
    >
      <div
        class="inline field"
        style="display: inherit; justify-content: unset; align-items: center;"
      >
        <label
          class="inputLabel"
        >
          Expected days of discounting
        </label>
        <span
          style="width: 50%; display: inline-block;"
        >
          <div
            class="ui disabled input field disabled"
            data-test-id="numberOfDaysDiscounting"
            style="width: 100%;"
          >
            <input
              disabled=""
              name="numberOfDaysDiscounting"
              tabindex="-1"
              type="number"
              value="10"
            />
          </div>
        </span>
      </div>
    </li>
    <li
      class="c3 c1"
    >
      <div
        class="field"
        style="display: inherit; justify-content: unset; align-items: center;"
      >
        <label
          class="inputLabel"
        >
          Title transfer date
        </label>
        <div
          class="ui input"
          data-test-id="dateOfPerformance"
          style="width: 50%;"
        >
          <input
            name="dateOfPerformance"
            type="date"
            value="2019-01-31"
          />
        </div>
      </div>
    </li>
    <li
      class="c3 c1"
    >
      <div
        class="field"
        style="display: inherit; justify-content: unset; align-items: center;"
      >
        <label
          class="inputLabel"
        >
          Supporting instrument(s)
        </label>
        <div
          aria-expanded="false"
          aria-multiselectable="true"
          class="ui compact multiple selection dropdown c4"
          data-test-id="supportingInstruments"
          name="supportingInstruments"
          role="listbox"
          style="width: 50%;"
          tabindex="0"
        >
          <div
            aria-live="polite"
            class="default text"
            role="alert"
          >
            Select Supporting Instruments
          </div>
          <i
            aria-hidden="true"
            class="dropdown icon"
          />
          <div
            class="menu transition"
          >
            <div
              aria-checked="false"
              aria-selected="true"
              class="selected item"
              role="option"
              style="pointer-events: all;"
            >
              <span
                class="text"
              >
                Credit insurance
              </span>
            </div>
            <div
              aria-checked="false"
              aria-selected="false"
              class="item"
              role="option"
              style="pointer-events: all;"
            >
              <span
                class="text"
              >
                Financial instrument
              </span>
            </div>
            <div
              aria-checked="false"
              aria-selected="false"
              class="item"
              role="option"
              style="pointer-events: all;"
            >
              <span
                class="text"
              >
                Payment confirmation
              </span>
            </div>
            <div
              aria-checked="false"
              aria-selected="false"
              class="item"
              role="option"
              style="pointer-events: all;"
            >
              <span
                class="text"
              >
                Parent company guarantee
              </span>
            </div>
            <div
              aria-checked="false"
              aria-selected="false"
              class="item"
              role="option"
              style="pointer-events: all;"
            >
              <span
                class="text"
              >
                Payment undertaking
              </span>
            </div>
            <div
              aria-checked="false"
              aria-selected="false"
              class="item"
              role="option"
              style="pointer-events: all;"
            >
              <span
                class="text"
              >
                Bill of exchange
              </span>
            </div>
            <div
              aria-checked="false"
              aria-selected="false"
              class="item"
              role="option"
              style="pointer-events: all;"
            >
              <span
                class="text"
              >
                Promissory note
              </span>
            </div>
          </div>
        </div>
      </div>
    </li>
    <li
      class="c3 c1"
    >
      <div
        class="inline field"
        style="display: inherit; justify-content: unset; align-items: center;"
      >
        <label
          class="inputLabel"
        >
          Other information
        </label>
        <textarea
          class=""
          data-test-id="comment"
          name="comment"
          rows="3"
          style="width: 50%;"
        />
      </div>
    </li>
  </form>
</DocumentFragment>
`;
